--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>ohmyfood</h1>
     </header>
+    <main>
+        <div class="ville">
+            <i class="fas fa-map-marker-alt fa-lg"></i>
+            <h2>Paris, Belleville</h2>
+        </div>
+    </main>
 </body>
 </html>
