boutons de choix

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
 </div>
         </section>
+        <section class="choix">
+            <h2>fonctionnement</h2>
+            <ol>
+                <li>choisissez un restaurant</li>
+                <li>composez votre menu</li>
+                <li>Dégustez au restaurant</li>
+            </ol>
+        </section>
     </main>
 </body>
 </html>
