ajout puces et variables colors

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
 </div>
         </section>
-        <section class="choix">
+        <section class ="choix">
             <h2>fonctionnement</h2>
             <ol>
-                <li>choisissez un restaurant</li>
-                <li>composez votre menu</li>
-                <li>Dégustez au restaurant</li>
+                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li><i class="fas fa-list-ul"></i>composez votre menu</li>
+                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
     </main>
