--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
 </div>
         </section>
         <section class ="choix">
-            <h2>fonctionnement</h2>
+            <h2>Fonctionnement</h2>
             <ol>
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
                 <li><i class="fas fa-list-ul"></i>composez votre menu</li>
                 <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
+        <section class="menus">
+            <div class="menus__cards">
+        <div class="card">Restaurant1</div>
+        <div class="card">Restaurant2</div>
+        <div class="card">Restaurant3</div>
+        <div class="card">Restaurant4</div> 
+            </div>
+        
+        </section>
+      
     </main>
 </body>
 </html>
