--- a/index.html
+++ b/index.html
@@ -34,12 +34,26 @@
                 <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
+
         <section class="menus">
-            <div class="menus__cards">
-        <div class="card">Restaurant1</div>
-        <div class="card">Restaurant2</div>
-        <div class="card">Restaurant3</div>
-        <div class="card">Restaurant4</div> 
+             <h2>Restaurants</h2>
+            <div class="menus__cards">  
+            <a href="#" class="card new">
+                <div class="card__image card__image-1"></div>
+                <div class="card__description"></div>
+            </a>
+            <a href="#" class="card new">
+                <div class="card__image card__image-2"></div>
+                <div class="card__description"></div>
+            </a>
+            <a href="#" class="card">
+                <div class="card__image card__image-3"></div>
+                <div class="card__description"></div>
+            </a>
+            <a href="#" class="card">
+                <div class="card__image card__image-4"></div>
+                <div class="card__description"></div>
+            </a>
             </div>
         
         </section>
