--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <i class="fas fa-map-marker-alt fa-lg"></i>
             <h2>Paris, Belleville</h2>
         </div> 
-        
+
         <main>
         <section class="explorer">
 <h2>Réservez le menu qui <br> vous convient</h2>
@@ -46,6 +46,7 @@
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                     <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </a>
             <a href="#" class="card new">
@@ -54,6 +55,7 @@
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                     <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </a>
             <a href="#" class="card">
@@ -62,6 +64,7 @@
                     <h3>A la française</h3>
                     <p>Cité rouge</p>
                     <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </a>
             <a href="#" class="card">
@@ -70,6 +73,7 @@
                     <h3>Le délice des sens</h3>
                     <p>Folie-méricourt</p>
                     <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
                 </div>
             </a>
             </div>
