--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="menus">
              <h2>Restaurants</h2>
             <div class="menus__cards">  
-            <a href="#" class="card new">
+            <a href="./pages/la palette du gout.html" class="card new">
                 <div class="card__image card__image-1"></div>
                 <div class="card__description">
                     <h3>La palette du goût</h3>
@@ -49,7 +49,7 @@
                     <i class="fas fa-heart"></i>
                 </div>
             </a>
-            <a href="#" class="card new">
+            <a href="./pages/la note enchantee.html" class="card new">
                 <div class="card__image card__image-2"></div>
                 <div class="card__description">
                     <h3>La note enchantée</h3>
@@ -58,7 +58,7 @@
                     <i class="fas fa-heart"></i>
                 </div>
             </a>
-            <a href="#" class="card">
+            <a href="./pages/a la francaise.html" class="card">
                 <div class="card__image card__image-3"></div>
                 <div class="card__description">
                     <h3>A la française</h3>
@@ -67,7 +67,7 @@
                     <i class="fas fa-heart"></i>
                 </div>
             </a>
-            <a href="#" class="card">
+            <a href="./pages/le delice des sens.html" class="card">
                 <div class="card__image card__image-4"></div>
                 <div class="card__description">
                     <h3>Le délice des sens</h3>
