--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -13,7 +13,7 @@
         <h1>ohmyfood</h1>
         <div>  <i class="far fa-heart"></i>
             <i class="fas fa-heart"></i>
-        </div>
+        </div><div class=""></div>
     </header>
     <img src="../assets/menu-1.jpg" alt="">
     <main>
