--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -11,13 +11,15 @@
 <body>
     <header>
         <h1>ohmyfood</h1>
-        <div>  <i class="far fa-heart"></i>
-            <i class="fas fa-heart"></i>
-        </div><div class=""></div>
+       
     </header>
     <img src="../assets/menu-1.jpg" alt="">
     <main>
 <h2>La palette du goût</h2>
+<div class="description"><i class="far fa-heart"></i>
+    <i class="fas fa-heart"></i>
+</div>
+<div class=""></div>
     </main>
     <footer>
         <h2>ohmyfood</h2>
