--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -8,19 +8,38 @@
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="page-resto">
     <header>
         <h1>ohmyfood</h1>
        
     </header>
-    <img src="../assets/menu-1.jpg" alt="">
-    <main>
+    <div class="banniere"><img src="../assets/menu-1.jpg" alt=""></div>
+    
+    <div class="resto__title">
 <h2>La palette du goût</h2>
-<div class="description"><i class="far fa-heart"></i>
+<div class="description">
+    <i class="far fa-heart"></i>
     <i class="fas fa-heart"></i>
+</div>  
 </div>
-<div class=""></div>
-    </main>
+<main class="resto-main">
+<section class="menu">
+    <div class="menu__category">
+        <h3>Entrées</h3>
+    <div class="menu-item">
+        <div class="menu-item__description">
+        <h4>Fricassée d'escargot</h4>
+        <p>Au piment d'espelette</p>
+    </div>
+        <span class="menu-item__prix">25€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    </div>
+    <div class="menu__category">Groupe2</div>
+    <div class="menu__category">Groupe3</div>
+</section>    
+</main>
     <footer>
         <h2>ohmyfood</h2>
         <p>
