--- a/pages/le delice des sens.html
+++ b/pages/le delice des sens.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le delice des sens</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../scss/style.css">
     <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
 <body>
