--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
 <body id="accueil">
-    <header>
-        <h1>ohmyfood</h1>
+    <header class="grosTitre">
+        <img src="./assets/ohmyfood.png"></i>
     </header>
-    <div><i class="fas fa-map-marker-alt fa-lg"></i></div>
-   <div class="ville"><h2>Paris, Belleville</h2>  
+   
+   <div class="ville"><h2><i class="fas fa-map-marker-alt fa-sm"></i>Paris, Belleville</h2>  
                  
                      
 </div>
@@ -27,9 +27,9 @@
         <section class ="choix">
             <h2>Fonctionnement</h2>
             <div class="liste">
-                <div class="bigBtn"><i class="fas fa-mobile-alt"></i><h2>Choisissez un restaurant</h2></div>
-                <div class="bigBtn"><i class="fas fa-list-ul"></i><h2>composez votre menu</h2></div>
-                <div class="bigBtn"><i class="fas fa-store"></i><h2>Dégustez au restaurant</h2></div>
+                <div class="bigBtn"><i class="fas fa-mobile-alt fa-2x"></i><h2>Choisissez un restaurant</h2></div>
+                <div class="bigBtn"><i class="fas fa-list-ul fa-2x"></i><h2>composez votre menu</h2></div>
+                <div class="bigBtn"><i class="fas fa-store fa-2x"></i><h2>Dégustez au restaurant</h2></div>
             </div>
         </section>
 
