--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
 <body id="accueil">
-    <header>
-        <h1>ohmyfood</h1>
+    <header class="titreP">
+        <img src="./assets/ohmyfood.png">
     </header>
     <div><i class="fas fa-map-marker-alt fa-lg"></i></div>
    <div class="ville"><h2>Paris, Belleville</h2>  
@@ -36,14 +36,16 @@
         <section class="restaurants">
              <h2>Restaurants</h2>
             <div class="menus__cards">  
-            <a href="./pages/la palette du gout.html" class="card new">
+            <a href="./pages/la palette du gout.html" class="cardNew">
+                <img src="./assets/menu-1.jpg" alt="" class="img1">
                 <div class="card__image card__image-1"></div>
                 <div class="card__description">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                 </div>
             </a>
-            <a href="./pages/la note enchantee.html" class="card new">
+            <a href="./pages/la note enchantee.html" class="cardNew">
+                <img src="./assets/menu-2.jpg" alt="" class="img2">
                 <div class="card__image card__image-2"></div>
                 <div class="card__description">
                     <h3>La note enchantée</h3>
@@ -51,6 +53,7 @@
                 </div>
             </a>
             <a href="./pages/a la francaise.html" class="card">
+                <img src="./assets/menu-3.jpg" alt="" class="img3">
                 <div class="card__image card__image-3"></div>
                 <div class="card__description">
                     <h3>A la française</h3>
@@ -58,6 +61,7 @@
                 </div>
             </a>
             <a href="./pages/le delice des sens.html" class="card">
+                <img src="./assets/menu-4.jpg" alt="" class="img4">
                 <div class="card__image card__image-4"></div>
                 <div class="card__description">
                     <h3>Le délice des sens</h3>
@@ -69,7 +73,7 @@
         </section>
       
     </main>
-    <footer>
+    <footer class="footer">
         <h2>ohmyfood</h2>
         <p>
             <i class="class= fas fa-utensils"></i>
@@ -81,7 +85,7 @@
         </p>
         <p>Mentions légales</p>
         <p>
-            <a href="mailto:ohmyfood@gmail.com">Contact</a>
+            <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
         </p>
     </footer>
 </body>
