--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section class ="choix">
             <h2 class="fonction">Fonctionnement</h2>
             <div class="liste">
-                <div class="bigBtn"><i class="fas fa-mobile-alt fa-2x"></i><h2>Choisissez un restaurant</h2></div>
-                <div class="bigBtn"><i class="fas fa-list-ul fa-2x"></i><h2>composez votre menu</h2></div>
-                <div class="bigBtn"><i class="fas fa-store fa-2x"></i><h2>Dégustez au restaurant</h2></div>
+                <div class="bigBtn"><li>1</li><i class="fas fa-mobile-alt fa-2x"></i><h2>Choisissez un restaurant</h2></div>
+                <div class="bigBtn"><li>2</li><i class="fas fa-list-ul fa-2x"></i><h2>composez votre menu</h2></div>
+                <div class="bigBtn"><li>3</li><i class="fas fa-store fa-2x"></i><h2>Dégustez au restaurant</h2></div>
             </div>
         </section>
 
