--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="restaurants">
-             <h2>Restaurants</h2>
+             <h2 class="titreResto">Restaurants</h2>
             <div class="menus__cards">  
                 <div class="card">
                 <a href="./pages/la palette du gout.html" class="cardNew">
