--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       
     </main>
     <footer class="footer">
-        <h2>ohmyfood</h2>
+        <h2 class="titreFooter">ohmyfood</h2>
         <p>
             <i class="class= fas fa-utensils"></i>
             Proposer un restaurant
