--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 <div class="card__image card__image-1"><img src="./assets/menu-1.jpg" alt="" class="img1"></div>
                 <div class="card__description">
                     <h3>La palette du goût</h3>
+                    <span class="coeur">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                      </span>
                     <p>Ménilmontant</p>
                 </div>
             </a>
@@ -53,6 +57,10 @@
                 <div class="card__image card__image-2"><img src="./assets/menu-2.jpg" alt="" class="img2"></div>
                 <div class="card__description">
                     <h3>La note enchantée</h3>
+                    <span class="coeur">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                      </span>
                     <p>Charonne</p>
                 </div>
             </a>
@@ -63,6 +71,10 @@
                 <div class="card__image card__image-3"><img src="./assets/menu-3.jpg" alt="" class="img3"></div>
                 <div class="card__description">
                     <h3>A la française</h3>
+                    <span class="coeur">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                      </span>
                     <p>Cité rouge</p>
                 </div>
             </a>
@@ -73,6 +85,10 @@
                 <div class="card__image card__image-4"><img src="./assets/menu-4.jpg" alt="" class="img4"></div>
                 <div class="card__description">
                     <h3>Le délice des sens</h3>
+                    <span class="coeur">
+                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
+                      </span>
                     <p>Folie-méricourt</p>
                 </div>
             </a>
