--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section class ="choix">
             <h2 class="fonction">Fonctionnement</h2>
             <div class="liste">
-                <div class="bigBtn"><li>1</li><i class="fas fa-mobile-alt fa-lg"></i><h2>Choisissez un restaurant</h2></div>
-                <div class="bigBtn"><li>2</li><i class="fas fa-list-ul fa-lg"></i><h2>composez votre menu</h2></div>
-                <div class="bigBtn"><li>3</li><i class="fas fa-store fa-lg"></i><h2>Dégustez au restaurant</h2></div>
+                <div class="bigBtn"><li>1</li><i class="fas fa-mobile-alt fa-lg"></i><h2 class="titres">Choisissez un restaurant</h2></div>
+                <div class="bigBtn"><li>2</li><i class="fas fa-list-ul fa-lg"></i><h2 class="titres">composez votre menu</h2></div>
+                <div class="bigBtn"><li>3</li><i class="fas fa-store fa-lg"></i><h2 class="titres">Dégustez au restaurant</h2></div>
             </div>
         </section>
 
@@ -100,14 +100,10 @@
     </main>
     <footer class="footer">
         <h2 class="titreFooter">ohmyfood</h2>
-        <p>
-            <i class="class= fas fa-utensils"></i>
-            Proposer un restaurant
-        </p>
-        <p>
-            <i class="class= fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
+        <i class="class= fas fa-utensils"></i><p class="gap1">
+        Proposer un restaurant</p>
+      <i class="class= fas fa-hands-helping"></i>
+        <p class="gap2">Devenir partenaire</p>
         <p>Mentions légales</p>
         <p>
             <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
