--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La palette du gout</title>
-    <link rel="stylesheet" href="../scss/style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
 </head>
 <body id="page-resto">
-    <header>
-        <h1>ohmyfood</h1>
-       
+    <header class="header">
+        <img src="../assets/ohmyfood.png" class="grosTitre"></i>
     </header>
-    <div class="banniere"><img src="../assets/menu-1.jpg" alt=""></div>
+    <div><img src="../assets/menu-1.jpg" class="banniere" alt=""></div>
     
     <div class="resto__title">
 <h2>La palette du goût</h2>
@@ -24,9 +23,8 @@
 </div>
 <main class="resto-main">
 <section class="menu">
-    <div class="menu__category">
-        <h3>Entrées</h3>
-    <div class="menu-item">
+    <div class="menu__category1">ENTREES</div>
+    <div class="bigBtn">
         <div class="menu-item__description">
         <h4>Fricassée d'escargot</h4>
         <p>Au piment d'espelette</p>
@@ -35,25 +33,93 @@
         <div class="menu-item__check">check</div>
         <i class="fas fa-check"></i>
     </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Foie gras de canard mi-cuit</h4>
+        <p>Et ses copeaux de truffe noire</p>
     </div>
-    <div class="menu__category">Groupe2</div>
-    <div class="menu__category">Groupe3</div>
+        <span class="menu-item__prix">35€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Oeuf au plat</h4>
+        <p>Assaisonné à la truffe sur lit de....</p>
+    </div>
+        <span class="menu-item__prix">20€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    </div>
+    <div class="menu__category2">PLATS</div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Filet de boeuf aux herbes</h4>
+        <p>Accompagné de sa ribambelle de légu...</p>
+    </div>
+        <span class="menu-item__prix">40€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Parmentier de queue de boeuf</h4>
+        <p>A la truffe noire sur sa purée de panais</p>
+    </div>
+        <span class="menu-item__prix">35€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Filet de Turbot</h4>
+        <p>Aux agrumes</p>
+    </div>
+        <span class="menu-item__prix">44€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+
+    <div class="menu__category3">DESSERTS</div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Paris-Brest</h4>
+        <p>Revisité</p>
+    </div>
+        <span class="menu-item__prix">18€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Macaron au chocolat d'exception</h4>
+        <p>Et glace à la vanille de Madagascar</p>
+    </div>
+        <span class="menu-item__prix">22€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
+    <div class="bigBtn">
+        <div class="menu-item__description">
+        <h4>Mousse au chocolat</h4>
+        <p>Au piment d'espelette et à la truffe noire</p>
+    </div>
+        <span class="menu-item__prix">23€</span>
+        <div class="menu-item__check">check</div>
+        <i class="fas fa-check"></i>
+    </div>
 </section>    
 </main>
-    <footer>
-        <h2>ohmyfood</h2>
-        <p>
-            <i class="class= fas fa-utensils"></i>
-            Proposer un restaurant
-        </p>
-        <p>
-            <i class="class= fas fa-hands-helping"></i>
-            Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p>
-            <a href="mailto:ohmyfood@gmail.com">Contact</a>
-        </p>
-    </footer>
+<footer class="footer">
+    <h2 class="titreFooter">ohmyfood</h2>
+    <i class="class= fas fa-utensils"></i><p class="gap1">Proposer un restaurant</p>
+  <i class="class= fas fa-hands-helping"></i>
+    <p class="gap2">Devenir partenaire</p>
+    <p>Mentions légales</p>
+    <p>
+        <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
+    </p>
+</footer>
 </body>
 </html>
