simplification sans margins

--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
              <h2 class="titreResto">Restaurants</h2>
             <div class="menus__cards">  
                 <div class="card">
-                <a href="./pages/la palette du gout.html" class="cardNew">
-               
-                <div class="card__image card__image-1"><img src="./assets/menu-1.jpg" alt="" class="img1"></div>
-                <div class="card__description">
-                    <h3>La palette du goût</h3>
-                    <span class="coeur">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
-                      </span>
-                    <p>Ménilmontant</p>
+                    <a href="./pages/la palette du gout.html" class="cardNew">
+                        <div class="card__image card__image-1"><img src="./assets/menu-1.jpg" alt="" class="img1"></div>
+                        <div class="card__description">
+                            <div>
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <span class="coeur">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </span>
+                        </div>
+                    </a>
                 </div>
-            </a>
-            </div>
             <div class="card cardNew">
             <a href="./pages/la note enchantee.html">
                 
