--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -110,6 +110,7 @@
         <i class="fas fa-check"></i>
     </div>
 </section>    
+<button class="button">Commander</button>
 </main>
 <footer class="footer">
     <h2 class="titreFooter">ohmyfood</h2>
