--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
-                            <span class="coeur">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                               <span class="coeur">
+                                <i class="fas fa-heart fa-2x"></i>
                             </span>
                         </div>
                     </a>
@@ -59,8 +58,7 @@
                 <div class="card__description">
                     <h3>La note enchantée</h3>
                     <span class="coeur">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-heart fa-2x"></i>
                       </span>
                     <p>Charonne</p>
                 </div>
@@ -73,8 +71,7 @@
                 <div class="card__description">
                     <h3>A la française</h3>
                     <span class="coeur">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-heart fa-2x"></i>
                       </span>
                     <p>Cité rouge</p>
                 </div>
@@ -87,8 +84,7 @@
                 <div class="card__description">
                     <h3>Le délice des sens</h3>
                     <span class="coeur">
-                        <i class="far fa-heart"></i>
-                        <i class="fas fa-heart"></i>
+                        <i class="fas fa-heart fa-2x"></i>
                       </span>
                     <p>Folie-méricourt</p>
                 </div>
