--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -15,11 +15,10 @@
     <div><img src="../assets/menu-1.jpg" class="banniere" alt=""></div>
     
     <div class="resto__title">
-<h2>La palette du goût</h2>
-<div class="description">
-    <i class="far fa-heart"></i>
-    <i class="fas fa-heart"></i>
-</div>  
+<h2 class="palette">La palette du goût</h2>
+<span class="coeur2">
+    <i class="fas fa-heart fa-2x"></i>
+</span>  
 </div>
 <main class="resto-main">
 <section class="menu">
