--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -81,6 +81,7 @@
     </div>
 
     <div class="menu__category3">DESSERTS</div>
+    <hr class="ligne"/>
     <div class="bigBtn">
         <div class="menu-item__description">
         <h4>Paris-Brest</h4>
@@ -114,9 +115,8 @@
 <footer class="footer">
     <h2 class="titreFooter">ohmyfood</h2>
     <i class="class= fas fa-utensils"></i><p class="gap1">Proposer un restaurant</p>
-  <i class="class= fas fa-hands-helping"></i>
-    <p class="gap2">Devenir partenaire</p>
-    <p>Mentions légales</p>
+    <i class="class= fas fa-hands-helping"></i><p class="gap2">Devenir partenaire</p>
+  <p>Mentions légales</p>
     <p>
         <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
     </p>
