--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <div class="menus__cards">  
                 <div class="card">
                     <a href="./pages/la palette du gout.html" class="cardNew">
+                        
                         <div class="card__image card__image-1"><img src="./assets/menu-1.jpg" alt="" class="img1"></div>
+                        <div class="nouveau"><p>Nouveau</p></div>
                         <div class="card__description">
                             <div>
                                 <h3>La palette du goût</h3>
@@ -55,7 +57,7 @@
             <div class="card cardNew">
             <a href="./pages/la note enchantee.html">
                 
-                <div class="card__image card__image-2"><img src="./assets/menu-2.jpg" alt="" class="img2"></div>
+                <div class="card__image card__image-2"><img src="./assets/menu-2.jpg" alt="" class="img2"></div><div class="nouveau"><p>Nouveau</p></div>
                 <div class="card__description">
                     <h3>La note enchantée</h3> 
                     <p>Charonne</p>
