--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -16,8 +16,9 @@
     
     <div class="resto__title">
 <h2 class="palette">La palette du goût</h2>
-<span class="coeur2">
+<span class="coeur">
     <i class="fas fa-heart fa-2x"></i>
+    <i class="far fa-heart fa-2x"></i>
 </span>  
 </div>
 <main class="resto-main">
