--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </header>
    
    <div class="ville">
-       <i class="fas fa-map-marker-alt fa-sm"></i>
+       <i class="fas fa-map-marker-alt fa-2x"></i>
        <h1>Paris, Belleville</h1>                
 </div>
         <main>
         <section class="explorer">
-<h1>Réservez le menu qui <br> vous convient</h1>
-<p>Découvrez des restaurants d'exception, <br> sélectionnés par nos soins.</p>
+<h1>Réservez le menu qui vous convient</h1>
+<p>Découvrez des restaurants d'exception,sélectionnés par nos soins.</p>
 <button class="button">Explorer nos restaurants</button>
 
         </section>
@@ -40,8 +40,7 @@
                 <div class="card">
                     <a href="./pages/la palette du gout.html" class="cardNew">
                         
-                        <div class="card__image card__image-1"><img src="./assets/menu-1.jpg" alt="" class="img1"></div>
-                        <div class="nouveau"><p>Nouveau</p></div>
+                        <div class="card__image card__image-1"><div class="nouveau"><p>Nouveau</p></div><img src="./assets/menu-1.jpg" alt="" class="img1"></div>  
                         <div class="card__description">
                             <div>
                                 <h3>La palette du goût</h3>
@@ -54,10 +53,10 @@
                         </div>
                     </a>
                 </div>
-            <div class="card cardNew">
-            <a href="./pages/la note enchantee.html">
+            <div class="card">
+            <a href="./pages/la note enchantee.html" class="cardNew">
                 
-                <div class="card__image card__image-2"><img src="./assets/menu-2.jpg" alt="" class="img2"></div><div class="nouveau"><p>Nouveau</p></div>
+                <div class="card__image card__image-2"><div class="nouveau"><p>Nouveau</p></div><img src="./assets/menu-2.jpg" alt="" class="img2"></div>
                 <div class="card__description">
                     <h3>La note enchantée</h3> 
                     <p>Charonne</p>
