--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -16,7 +16,7 @@
     
     <div class="resto__title">
 <h2 class="palette">La palette du goût</h2>
-<span class="coeur">
+<span class="coeur2">
     <i class="fas fa-heart fa-2x"></i>
     <i class="far fa-heart fa-2x"></i>
 </span>  
@@ -24,94 +24,78 @@
 <main class="resto-main">
 <section class="menu">
     <div class="menu__category1">ENTREES</div>
-    <div class="bigBtn">
+    <hr noshade class="ligne"/>
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Fricassée d'escargot</h4>
         <p>Au piment d'espelette</p>
     </div>
         <span class="menu-item__prix">25€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Foie gras de canard mi-cuit</h4>
         <p>Et ses copeaux de truffe noire</p>
     </div>
         <span class="menu-item__prix">35€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Oeuf au plat</h4>
         <p>Assaisonné à la truffe sur lit de....</p>
     </div>
         <span class="menu-item__prix">20€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
     </div>
     <div class="menu__category2">PLATS</div>
-    <div class="bigBtn">
+    <hr class="ligne"/>
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Filet de boeuf aux herbes</h4>
         <p>Accompagné de sa ribambelle de légu...</p>
     </div>
         <span class="menu-item__prix">40€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Parmentier de queue de boeuf</h4>
         <p>A la truffe noire sur sa purée de panais</p>
     </div>
         <span class="menu-item__prix">35€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Filet de Turbot</h4>
         <p>Aux agrumes</p>
     </div>
         <span class="menu-item__prix">44€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
 
     <div class="menu__category3">DESSERTS</div>
     <hr class="ligne"/>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Paris-Brest</h4>
         <p>Revisité</p>
     </div>
         <span class="menu-item__prix">18€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Macaron au chocolat d'exception</h4>
         <p>Et glace à la vanille de Madagascar</p>
     </div>
         <span class="menu-item__prix">22€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
-    <div class="bigBtn">
+    <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Mousse au chocolat</h4>
         <p>Au piment d'espelette et à la truffe noire</p>
     </div>
         <span class="menu-item__prix">23€</span>
-        <div class="menu-item__check">check</div>
-        <i class="fas fa-check"></i>
     </div>
 </section>    
-<button class="button">Commander</button>
+<button class="button2">Commander</button>
 </main>
 <footer class="footer">
     <h2 class="titreFooter">ohmyfood</h2>
