--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section class ="choix">
             <h1 class="fonction">Fonctionnement</h1>
             <div class="liste">
-                <div class="bigBtn"><li>1</li><i class="fas fa-mobile-alt fa-lg"></i><h1 class="titres">Choisissez un restaurant</h1></div>
-                <div class="bigBtn"><li>2</li><i class="fas fa-list-ul fa-lg"></i><h1 class="titres">composez votre menu</h1></div>
-                <div class="bigBtn"><li>3</li><i class="fas fa-store fa-lg"></i><h1 class="titres">Dégustez au restaurant</h1></div>
+                <div class="bigBtn"><span class="li">1</span><i class="fas fa-mobile-alt fa-lg"></i><h1 class="titres">Choisissez un restaurant</h1></div>
+                <div class="bigBtn"><span class="li">2</span><i class="fas fa-list-ul fa-lg"></i><h1 class="titres">composez votre menu</h1></div>
+                <div class="bigBtn"><span class="li">3</span><i class="fas fa-store fa-lg"></i><h1 class="titres">Dégustez au restaurant</h1></div>
             </div>
         </section>
 
