--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
                         
                         <div class="card__image card__image-1"><div class="nouveau"><p>Nouveau</p></div><img src="./assets/menu-1.jpg" alt="" class="img1"></div>  
                         <div class="card__description">
-                            <div>
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
-                            </div>
                                <span class="coeur">
                                 <i class="fas fa-heart fa-2x"></i>
                                 <i class="far fa-heart fa-2x"></i>
@@ -105,10 +103,10 @@
     </main>
     <footer class="footer">
         <h2 class="titreFooter">ohmyfood</h2>
-        <i class="class= fas fa-utensils"></i><p class="gap1">
-        Proposer un restaurant</p>
-      <i class="class= fas fa-hands-helping"></i>
-        <p class="gap2">Devenir partenaire</p>
+        <span><i class="class= fas fa-utensils"></i><p class="gap">
+        Proposer un restaurant</p></span>
+        <span><i class="class= fas fa-hands-helping"></i>
+        <p class="gap">Devenir partenaire</p></span>
         <p>Mentions légales</p>
         <p>
             <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
