--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     </main>
     <footer class="footer">
         <h2 class="titreFooter">ohmyfood</h2>
-        <span><i class="class= fas fa-utensils"></i><p class="gap">
-        Proposer un restaurant</p></span>
-        <span><i class="class= fas fa-hands-helping"></i>
-        <p class="gap">Devenir partenaire</p></span>
+        <div class="icone"><i class="class= fas fa-utensils"></i><p class="gap">
+        Proposer un restaurant</p></div>
+        <div class="icone"><i class="class= fas fa-hands-helping"></i>
+        <p class="gap">Devenir partenaire</p></div>
         <p>Mentions légales</p>
         <p>
             <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
