--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -30,45 +30,45 @@
         <h4>Fricassée d'escargot</h4>
         <p>Au piment d'espelette</p>
     </div>
-        <span class="menu-item__prix">25€</span>
+        <span class="menu-item__prix">25€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Foie gras de canard mi-cuit</h4>
         <p>Et ses copeaux de truffe noire</p>
     </div>
-        <span class="menu-item__prix">35€</span>
+        <span class="menu-item__prix">35€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Oeuf au plat</h4>
         <p>Assaisonné à la truffe sur lit de....</p>
     </div>
-        <span class="menu-item__prix">20€</span>
+        <span class="menu-item__prix">20€</span><div class="animation"><div class="check"><i class="fa-solid fa-circle-check"></i></div></div>
     </div>
     </div>
     <div class="menu__category2">PLATS</div>
     <hr class="ligne"/>
     <div class="bigBtn2">
         <div class="menu-item__description">
-        <h4>Filet de boeuf aux herbes</h4>
-        <p>Accompagné de sa ribambelle de légu...</p>
-    </div>
-        <span class="menu-item__prix">40€</span>
+            <h4>Filet de boeuf aux herbes</h4>
+            <p>Accompagné de sa ribambelle de légu...</p>
+        </div>
+        <span class="menu-item__prix">40€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Parmentier de queue de boeuf</h4>
         <p>A la truffe noire sur sa purée de panais</p>
     </div>
-        <span class="menu-item__prix">35€</span>
+        <span class="menu-item__prix">35€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Filet de Turbot</h4>
         <p>Aux agrumes</p>
     </div>
-        <span class="menu-item__prix">44€</span>
+        <span class="menu-item__prix">44€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
 
     <div class="menu__category3">DESSERTS</div>
@@ -78,30 +78,31 @@
         <h4>Paris-Brest</h4>
         <p>Revisité</p>
     </div>
-        <span class="menu-item__prix">18€</span>
+        <span class="menu-item__prix">18€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Macaron au chocolat d'exception</h4>
         <p>Et glace à la vanille de Madagascar</p>
     </div>
-        <span class="menu-item__prix">22€</span>
+        <span class="menu-item__prix">22€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Mousse au chocolat</h4>
         <p>Au piment d'espelette et à la truffe noire</p>
     </div>
-        <span class="menu-item__prix">23€</span>
+        <span class="menu-item__prix">23€</span><div class="animation"><i class="fa-solid fa-circle-check"></i></div>
     </div>
 </section>    
 <button class="button2">Commander</button>
 </main>
 <footer class="footer">
     <h2 class="titreFooter">ohmyfood</h2>
-    <i class="class= fas fa-utensils"></i><p class="gap1">Proposer un restaurant</p>
-    <i class="class= fas fa-hands-helping"></i><p class="gap2">Devenir partenaire</p>
-  <p>Mentions légales</p>
+    <p class="gap"><i class="class= fas fa-utensils"></i>
+    Proposer un restaurant</p>
+    <p class="gap"><i class="class= fas fa-hands-helping"></i>Devenir partenaire</p>
+    <p>Mentions légales</p>
     <p>
         <a href="mailto:ohmyfood@gmail.com" class="contact">Contact</a>
     </p>
