animations carré vert

--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -19,6 +19,7 @@
 <span class="coeur2">
     <i class="fas fa-heart fa-2x"></i>
     <i class="far fa-heart fa-2x"></i>
+
 </span>  
 </div>
 <main class="resto-main">
@@ -27,11 +28,15 @@
     <hr noshade class="ligne"/>
     <div class="bigBtn2">
         <div class="menu-item__description">
-        <h4>Fricassée d'escargot</h4>
-        <p>Au piment d'espelette</p>
+            <h4>Fricassée d'escargot</h4>
+            <p>Au piment d'espelette</p>
+        </div>
+       <span class="menu-item__prix">25€</span>
+       <div class="checkbox">
+        <i class="fa-solid fa-circle-check fa-2x"></i>
+       </div>
     </div>
-        <span class="menu-item__prix">25€</span>
-    </div>
+     
     <div class="bigBtn2">
         <div class="menu-item__description">
         <h4>Foie gras de canard mi-cuit</h4>
