animations avec icones

--- a/pages/la palette du gout.html
+++ b/pages/la palette du gout.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La palette du gout</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://kit.fontawesome.com/24b0e5f442.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body id="page-resto">
     <header class="header">
@@ -33,7 +34,7 @@
         </div>
        <span class="menu-item__prix">25€</span>
        <div class="checkbox">
-        <i class="fa-solid fa-circle-check fa-2x"></i>
+        <i class="fa-solid fa-circle-check"></i>
        </div>
     </div>
      
